--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "dependencies": {
     "aws-amplify": "^1.1.7",
     "aws-amplify-react": "^2.1.1",
+    "create-react-class": "^15.6.3",
+    "rc-time-picker": "^3.4.0",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
     "react-scripts": "2.0.5"
